fixed spacing and firefox margin cache

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ pre {
 	font-size: 1vh;
 	display: inline-block;
 	font-weight: 400;
+	margin: 0!important;
+	padding: 0!important;
+	letter-spacing: 0px!important;
 }
 
 body {
